@@ -602,4 +602,35 @@ get_update_area() returns an invalid Region.
 </return>
 </function>
 
+<function name="gdk_window_set_back_pixmap">
+<description>
+Sets the background pixmap of @window. 
+A background pixmap will be tiled, positioning the first tile at the origin of
+@window, or if @parent_relative is %TRUE, the tiling will be done based on the
+origin of the parent window (useful to align tiles in a parent with tiles
+in a child).
+
+The windowing system will normally fill a window with its background
+when the window is obscured then exposed, and when you call
+gdk_window_clear().
+
+See also unset_back_pixmap().
+</description>
+<parameters>
+<parameter name="window">
+<parameter_description> a #GdkWindow
+</parameter_description>
+</parameter>
+<parameter name="pixmap">
+<parameter_description> a #GdkPixmap
+</parameter_description>
+</parameter>
+<parameter name="parent_relative">
+<parameter_description> whether the tiling origin is at the origin of @window&apos;s parent
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
 </root>
