@@ -1,5 +1,5 @@
 // -*- c++ -*-
-/* $Id$ */
+/* $Id: window.ccg,v 1.7 2004/03/09 17:36:25 murrayc Exp $ */
 
 /* Copyright 1998-2002 The gtkmm Development Team
  *
@@ -75,6 +75,11 @@ void Window::get_internal_paint_info(Glib::RefPtr<Drawable>& real_drawable, int&
   GdkDrawable* temp_drawable = 0;
   gdk_window_get_internal_paint_info(const_cast<GdkWindow*>(gobj()), &temp_drawable, &x_offset, &y_offset);
   real_drawable = Glib::wrap(temp_drawable);
+}
+
+void Window::unset_back_pixmap()
+{
+  gdk_window_set_back_pixmap(gobj(), NULL, FALSE);
 }
 
 } // namespace Gdk
