@@ -132,7 +132,17 @@ public:
   _WRAP_METHOD(void set_startup_id(const Glib::ustring& startup_id), gdk_window_set_startup_id)
   _WRAP_METHOD(void set_transient_for(const Glib::RefPtr<Window>& parent), gdk_window_set_transient_for)
   _WRAP_METHOD(void set_background(const Color& color), gdk_window_set_background)
-  _WRAP_METHOD(void set_back_pixmap(const Glib::RefPtr<Pixmap>&pixmap, bool parent_relative), gdk_window_set_back_pixmap)
+  _WRAP_METHOD(void set_back_pixmap(const Glib::RefPtr<Pixmap>&pixmap, bool parent_relative = true), gdk_window_set_back_pixmap)
+
+  /** Unsets the background pixmap of @a window so that the window will have no
+   * background.  A window with no background will never have its
+   * background filled by the windowing system, instead the window will
+   * contain whatever pixels were already in the corresponding area of
+   * the display.
+   *
+   * @see set_back_pixmap().
+   */
+  void unset_back_pixmap();
 
 #m4 _CONVERSION(const Cursor&,GdkCursor*,const_cast<GdkCursor*>(($3).gobj()))
   _WRAP_METHOD(void set_cursor(const Cursor& cursor), gdk_window_set_cursor)
