@@ -1,3 +1,11 @@
+2008-04-29  Murray Cumming  <murrayc@murrayc.com>
+
+	* gdk/src/window.ccg:
+	* gdk/src/window.hg: Added unset_back_pixmap().
+	* gdk/src/gdk_docs_override.xml: Changed the back_pixmap() documentation 
+	to not mention NULL, and to refer to unset_back_pixmap().
+	This fixes bug #525967 (Jonathon Jongsma).
+
 2008-04-11  Andreas Klaedtke  <andreas.klaedtke@gmx.net>
 
 	* gtk/src/widget.hg: get_direction(): Add a const version and deprecate 
